--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <img src="images/handwriting.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Evaluating your progress</h5>
-                    <p class="card-text">Attend conferences, share your stories, gather feedback, and celebrate your achievements!</p>
+                    <p class="card-text">Share your stories, gather feedback, and celebrate your achievements!</p>
                     <a href="reflection.html" class="stretched-link"></a>
                 </div>
             </div>
