--- a/progression-practice.html
+++ b/progression-practice.html
@@ -46,6 +46,7 @@
     <p class="m-4">Here are some suggestions to make the most of your practice time:</p>
 
     <!--Carousel with tips -->
+    
     <!--Carousel naviation at bottom-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -62,7 +63,7 @@
             <div class="carousel-item active">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="First slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Build a habit. <p>
+                    <p class="display-4">habit.<p>
                             <p class="display-5">If you can find a specific time and duration to write everyday, you will be much more likely to actually do it.</p>
                 </div>
             </div>
@@ -70,23 +71,23 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Second slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Eliminate distractions. <p>
-                            <p class="display-5">Noise cancelling headphones are awesome for this. The quieter and more focused your time is, the better of you will be.</p>
+                    <p class="display-4">focus.<p>
+                            <p class="display-5">Noise cancelling headphones are awesome for this. The quieter and more focused your time is, the better off you will be.</p>
                 </div>
             </div>
             <!--Tip 3: Take things in chunks.-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Third slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Take things in chunks.<p>
-                            <p class="display-5">If you get stuck on one section, set it aside and work on another part. It's totally okay to take things nonlinearally if it helps you get everything out of your head.</p>
+                    <p class="display-4">chunks.<p>
+                            <p class="display-5">If you get stuck on one section , set it aside and work on another part. It's totally okay to take things nonlinearally.</p>
                 </div>
             </div>
             <!--Tip 4: Set word limits.-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Fourth slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Set word limits.<p>
+                    <p class="display-4">limits.<p>
                             <p class="display-5">Until you've produced x number of words, it's not time to stop yet. (Start small and gradually increase).</p>
                 </div>
             </div>
@@ -94,8 +95,8 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Fifth slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Find a writing buddy!<p>
-                            <p class="display-5">Two heads is always better than one! This can be fun because you can have someone to share your work with when you're finished!</p>
+                    <p class="display-4">buddies.<p>
+                            <p class="display-5">Two heads are always better than one! This can be fun because you can have someone to share your work with when you're finished!</p>
                 </div>
             </div>
 
@@ -103,7 +104,7 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Sixth slide">
                 <div class="carousel-caption">
-                    <p class="display-4">Join a writing club!<p>
+                    <p class="display-4">clubs.<p>
                             <p class="display-5">If you really want accountability, this is the way to do it. There are lots of other people out there just like you!</p>
                 </div>
             </div>
