--- a/conception.html
+++ b/conception.html
@@ -58,10 +58,8 @@
 
     <p class="m-4">Another classification is by genre, a category of artisitc composition characterized by similarities in form, style, or subject matter. Many stories incorporate several genres. Below is a listing of a few of the more common forms. Click on a picture to explore more.</p>
 
-    <!--Plan to make cards that flip to the back for more information about subgenres -->
-
-    <!--Front of cards for genres. Clicking could take you to the back of the cards. Alternate option: use jQuery to fadeout one card and fade in the other. -->
-    <div class="row">
+    <!--Front of cards shows pictures. Clicking flips the card to the back to show you information about the genre and popular subgenres.-->
+    <div class="row m-4">
         <!--Fantasy card -->
         <div class="col-md-6 col-lg-4">
             <div class="card mb-4">
@@ -69,7 +67,7 @@
                     <img class="card-img-top" src="images/fantasy.jpg" alt="Fantasy Queen">
                     <div class="card-body">
                         <h5 class="card-title">Fantasy</h5>
-                        <p class="card-text">Magic, mythology, kingdoms, quests, often in historical settings. World building is critical.<br>Popular Subgenres: High/Epic fantasy, low fantasy, Urban, Contemporary, comic, slipstream, horror, historical, magical realism, sword and sorcery, dark fantasy, fables, fairy tales, and superheroes.</p>
+                        <p class="card-text">Magic, mythology, kingdoms, and quests, often in historical settings. World building is critical.<br>Popular Subgenres: High/Epic fantasy, low fantasy, urban, contemporary, comic, slipstream, horror, historical, magical realism, sword and sorcery, dark fantasy, fables, fairy tales, and superheroes.</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +93,7 @@
                     <img class="card-img-top" src="images/romance.jpg" alt="Couple holding hands">
                     <div class="card-body">
                         <h5 class="card-title">Romance</h5>
-                        <p class="card-text">Romantic relationships between people. A lot of sensual tension, desire, and idealism is frequently present.<br>Popular Subgenres: Contemporary, historical, western, paranormal, gothic, regency, and romantic suspense.</p>
+                        <p class="card-text">Romantic relationships between people. A lot of sensual tension, desire, and idealism is frequently present.<br>Popular Subgenres: Contemporary, historical, western, paranormal, futuristic, time travel, gothic, regency, young adult, and romantic suspense.</p>
                     </div>
                 </div>
             </div>
@@ -121,7 +119,7 @@
                     <img class="card-img-top" src="images/mystery.jpg" alt="Strange Shadows">
                     <div class="card-body">
                         <h5 class="card-title">Mystery </h5>
-                        <p class="card-text">Clues lead to rising tension as the solution approaches. Often intentionally misleading, with a big twist at the end.<br>Popular Subgenres: Capers, detectives, Noir, historical, cozy mystery, police procedural, hobby mystery, domestic, true crime and paranormal mystery.</p>
+                        <p class="card-text">Clues lead to rising tension as the solution approaches. Often intentionally misleading, with a big twist at the end.<br>Popular Subgenres: Capers, detectives, Noir, historical, cozy mystery, police procedural, hobby mystery, domestic, true crime, and paranormal mystery.</p>
                     </div>
                 </div>
             </div>
