--- a/conception.html
+++ b/conception.html
@@ -59,7 +59,7 @@
     <p class="m-4">Another classification is by genre, a category of artisitc composition characterized by similarities in form, style, or subject matter. Many stories incorporate several genres. Below is a listing of a few of the more common forms. Click on a picture to explore more.</p>
 
     <!--Front of cards shows pictures. Clicking flips the card to the back to show you information about the genre and popular subgenres.-->
-    <div class="row m-4">
+    <div class="row m-4 conception-cards">
         <!--Fantasy card -->
         <div class="col-md-6 col-lg-4">
             <div class="card mb-4">
