--- a/conception.html
+++ b/conception.html
@@ -48,7 +48,7 @@
 
     <!--Brief Listing of writing types-->
     <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Flash Fiction: 1,000 words or less. Great for writing warm-ups and can easily be accomplished in one sitting.</a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-light">Flash Fiction: 1,000 words or less. Great for writing warm-ups and can easily be accomplished in one sitting.</a>
         <a href="#" class="list-group-item list-group-item-action list-group-item-light">Short Stories: 1,000-7,500 words. These often appear in magazines. Many professional writers started their careers with short stories.</a>
         <a href="#" class="list-group-item list-group-item-action list-group-item-light">Novelette: 7,500-20,000 words. Can be difficult to sell to a print publisher, but great for publishing online.</a>
         <a href="#" class="list-group-item list-group-item-action list-group-item-light">Novella: 20,000-50,000 words. A popular length for the e-publishing market.</a>
@@ -151,15 +151,15 @@
 
     <!--A brief list of the many different types of poetry out there-->
     <ul class="list-group">
-        <li class="list-group-item">Blank verse: Written with a precise meter</li>
-        <li class="list-group-item">Rhymed poetry: Rhyme with varied scheme</li>
-        <li class="list-group-item">Free verse: Lacks consistent rhyme scheme, metrical pattern or musical form.</li>
-        <li class="list-group-item">Haiku: 3 lines: 5 syllables, 7 syllables, 5 again</li>
-        <li class="list-group-item">Sonnet: 14 lines and typically about love</li>
-        <li class="list-group-item">Ode: Tribute to a subject</li>
-        <li class="list-group-item">Limerick: 5 lines; AABBA rhyme scheme</li>
-        <li class="list-group-item">Narrative Poetry: Tells a story</li>
-        <li class="list-group-item">Ballad: Form of narrative verse that's either poetic or musical. (Think <em>Bob Dylan</em> and <em>The Beatles</em>)</li>
+        <li class="list-group-item list-group-item-action">Blank verse: Written with a precise meter</li>
+        <li class="list-group-item list-group-item-action">Rhymed poetry: Rhyme with varied scheme</li>
+        <li class="list-group-item list-group-item-action">Free verse: Lacks consistent rhyme scheme, metrical pattern or musical form.</li>
+        <li class="list-group-item list-group-item-action">Haiku: 3 lines: 5 syllables, 7 syllables, 5 again</li>
+        <li class="list-group-item list-group-item-action">Sonnet: 14 lines and typically about love</li>
+        <li class="list-group-item list-group-item-action">Ode: Tribute to a subject</li>
+        <li class="list-group-item list-group-item-action">Limerick: 5 lines; AABBA rhyme scheme</li>
+        <li class="list-group-item list-group-item-action">Narrative Poetry: Tells a story</li>
+        <li class="list-group-item list-group-item-action">Ballad: Form of narrative verse that's either poetic or musical. (Think <em>Bob Dylan</em> and <em>The Beatles</em>)</li>
     </ul>
 
     <h3 class="m-4">Nonfiction</h3>
