--- a/reflection-rejection.html
+++ b/reflection-rejection.html
@@ -93,7 +93,7 @@
 
     <!--This button takes you to a fascinating site of all the most famous author rejections. A lot of these people should sound pretty familiar... -->
     <div class="text-center">
-        <a href="https://writingforaliving.us/the-most-comprehensive-collection-of-famous-books-rejected-by-publishers/" target="_blank"><button type="button" class="btn btn-primary btn-lg">More Rejected Authors</button></a>
+        <a href="https://writingforaliving.us/the-most-comprehensive-collection-of-famous-books-rejected-by-publishers/" target="_blank" class="btn btn-primary btn-lg" role="button">More Rejected Authors</a>
     </div>
     
     <p class="m-4">The important takeaway is that rejection is a normal part of the writing process. Keep trying. Something is bound to happen.</p>
