--- a/progression-practice.html
+++ b/progression-practice.html
@@ -125,7 +125,7 @@
     <nav aria-label="Page navigation example" class="m-4">
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="progression.html" tabindex="-1">Lesson 1: Motivation</a></li>
-            <li class="page-item"><a class="page-link" href="progression-writers-block.html">Lesson 2: Beating Writer's Block</a></li>
+            <li class="page-item"><a class="page-link" href="progression-writers-block.html">Lesson 2: Writer's Block</a></li>
             <li class="page-item disabled"><a class="page-link" href="#" aria-disabled="true">Lesson 3: Practice</a></li>
         </ul>
     </nav>
