--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -61,7 +61,7 @@
     <nav aria-label="Page navigation example" class="m-4">
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="progression.html">Lesson 1: Motivation</a></li>
-            <li class="page-item disabled"><a class="page-link" href="progression-writers-block.html" aria-disabled="true">Lesson 2: Beating Writer's Block</a></li>
+            <li class="page-item disabled"><a class="page-link" href="progression-writers-block.html" aria-disabled="true">Lesson 2: Writer's Block</a></li>
             <li class="page-item"><a class="page-link" href="progression-practice.html">Lesson 3: Practice</a></li>
         </ul>
     </nav>
