--- a/progression.html
+++ b/progression.html
@@ -113,7 +113,7 @@
     <nav aria-label="Page navigation example" class="m-4">
         <ul class="pagination justify-content-center">
             <li class="page-item disabled"><a class="page-link" href="#" aria-disabled="true">Lesson 1: Motivation</a></li>
-            <li class="page-item"><a class="page-link" href="progression-writers-block.html">Lesson 2: Beating Writer's Block</a></li>
+            <li class="page-item"><a class="page-link" href="progression-writers-block.html">Lesson 2: Writer's Block</a></li>
             <li class="page-item"><a class="page-link" href="progression-practice.html">Lesson 3: Practice</a></li>
         </ul>
     </nav>
