--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -56,6 +56,10 @@
     <p class="m-4">Take a break and go for a walk. Seriously. The break will help take your mind off the writing, letting you enjoy other aspects of life. Frequently ideas come to us when we least expect it (and generally at really inconvenient times, like when you're trying to sleep or taking a shower). Additionally, the excercise stimulates blood flow to the brain, which is never a bad thing!</p>
 
     <p class="m-4">Listen to music. Inspiration takes place in the wildest of forms. I've found that listening to music makes me feel supercharged and capable of anything. I hardly ever write without listening to something.</p>
+    
+    <p class="m-4">Get a good night's sleep. Without enough sleep, your brain will be moving sluggishly and your mind will feel inherently less creative.</p>
+    
+    <p class="m-4">If all else fails, explain the situation to a trusted friend. They might be able to help you get unstuck and come up with solutions you'd have never thought of.</p>
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-2">
