--- a/conception.html
+++ b/conception.html
@@ -143,9 +143,9 @@
 
     <p class="m-4">When most people think of poetry, they probably imagine something like this:</p>
 
-    <em class="m-4">Roses are red</em><br>
-    <em class="m-4">Yoda is green</em><br>
-    <em class="m-4">Everything is proceeding as I have forseen</em><br>
+    <p class="ml-4 mb-0"><em>Roses are red</em></p>
+    <p class="ml-4 mb-0"><em>Yoda is green</em></p>
+    <p class="ml-4 mb-0"><em>Everything is proceeding as I have forseen</em></p>
 
     <p class="m-4">Or some other such sillyness. Poetry takes many forms. Like with prose, poetry has many different lengths and styles. </p>
 
