--- a/conception-voice.html
+++ b/conception-voice.html
@@ -45,7 +45,7 @@
     <!--Lesson on voice -->
     <p class="m-4">You've considered writing styles. Now it's time to find your voice. This is what makes you unique, setting you apart from other writers.</p>
 
-    <h3 class="m-4">Point of View</h3>
+    <h3 class="m-4">Point of View (Narrator's Voice)</h3>
     <p class="m-4">If you're a fan of Douglas Adam's <em>Hitchikers Guide to the Galaxy</em>, you may remember the point-of-view gun that makes people see things your way. I would love to have one of those myself, but that's not what Point of View means to writers. In writing, point-of-the view frames how you go about telling a story.</p>
 
     <h4 class="m-4">1st Person POV</h4>
@@ -56,6 +56,12 @@
 
     <h4 class="m-4">3rd Person</h4>
     <p class="m-4">The author narrates the story using he/she. There are three types of 3rd person writing: 1) Third person omniscient - the narrator knows everything about the characters. 2) Third person limited omnisicent - The author sticks closely to one character but stays with 3rd person. This is helpful for controlling what the reader knows. 3) Third person objective - neutral narrator and observational tone.</p>
+    
+    <h3 class="m-4">Author's Voice</h3>
+    <p class="m-4">This voice reflects the attitudes and opinions of authors themselves. Generally, this voice tends to appear more explicitly in nonfiction. Author's voice is especially prominent in news articles, which are generally slanted towards a particular party/ideology, despite the fact that journalism is theoretically neutral.</p>
+    
+    <h3 class="m-4">Character's Voice</h3>
+    <p class="m-4">In some circumstances, the narrator is a character within the story. At other times, we get the opportunity to hear the thoughts, feelings, attitudes, and opinions of one or more characters. This technique allows us to connect emotionally with the characters and can provide some powerful storytelling if done well.</p>
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
